#2_230424_4 feature/Manager/Bootcamp/Delete 부트캠프 삭제